style.css
:root {
  --text: #333333;
  --background: linear-gradient(90deg, #a1c4fd, #c2e9fb);
  --shadow: rgb(0 0 0 / 35%) 0px 5px 15px;
  --cards: #ecf8fe;
}
* {
  padding: 0;
  margin: 0;
  box-sizing: border-box;
  font-family: "Karla", sans-serif;
  outline: none;
}
html {
  font-size: 93.75%;
}
body {
  color: var(--text);
  background: var(--background);
  height: 100vh;
}
header {
  height: 10vh;
  display: flex;
  align-items: center;
  justify-content: center;
}
main {
  height: 90vh;
}
.search-block {
  display: flex;
  align-items: center;
  justify-content: center;
  height: 15vh;
}
.input-bar {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 1rem;
  box-shadow: var(--shadow);
}
.city-input {
  width: 40vw;
  padding: 0.7rem 1.2rem;
  font-size: 1rem;
  font-weight: 600;
  font-style: oblique;
  background-color: var(--cards);
  border: none;
  border-radius: 1rem 0 0 1rem;
}
.search-button {
  border: none;
  border-radius: 0 1rem 1rem 0;
  background-color: var(--cards);
  padding: 0.5rem;
}
.search-icon {
  height: 1.4rem;
  width: 1.8rem;
}
.search-icon:hover {
  opacity: 0.7;
  cursor: pointer;
}
.display-card {
  height: 75vh;
  width: 100vw;
  display: flex;
  align-items: center;
  justify-content: center;
}
.display-block {
  display: flex;
  flex-direction: column;
  align-items: center;
  min-height: 250px;
  height: 70vh;
  width: 80vw;
  border-radius: 1rem;
  box-shadow: var(--shadow);
  background-color: var(--cards);
}
.side-block {
  padding: 1rem;
}
.display-city {
  font-size: 2rem;
  font-weight: 500;
}
.display-weather {
  margin: 1.25rem 0 0.25rem;
}
.weather {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  font-weight: 700;
  font-size: 2rem;
  padding: 0 0 1rem;
}
.weather-icon {
  height: 4rem;
  width: 4rem;
  margin-right: 1rem;
}
.discription {
  font-size: 1.3rem;
}
.display-temperature {
  display: flex;
  align-items: flex-start;
  justify-content: space-evenly;
  font-size: 3.5rem;
  margin-bottom: 1.8rem;
}
.temperature {
  font-size: 7rem;
}
.temperature-unit {
  padding-top: 1.2rem;
}
.display-feelslike {
  display: flex;
  align-items: center;
  justify-content: center;
}
.feels-like {
  font-size: 1rem;
  font-weight: 400;
}
.unit {
  font-size: 0.7rem;
  margin-right: 1rem;
}
.minmax-block {
  display: flex;
  align-items: center;
  justify-content: center;
  font-size: 1rem;
  font-weight: 400;
}
footer {
  padding: 0.5rem;
  text-align: center;
  font-size: 1rem;
  font-weight: 500;
}
a {
  text-decoration: none;
  color: black;
}
a:hover {
  opacity: 0.7;
  cursor: pointer;
}
@media (min-width: 850px) {
  html {
    font-size: 87.5%;
  }
  header {
    height: 15vh;
    font-size: 1.5rem;
  }
  main {
    height: 70vh;
  }
  .search-block {
    height: 10vh;
  }
  .city-input {
    width: 23rem;
  }
  .display-card {
    height: 55vh;
  }
  .display-block {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    height: 25vh;
    min-width: 600px;
    width: 40vw;
    padding: 1rem;
  }
}

